<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="20dp">

    <TextView
        android:id="@+id/tvStatsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/statistics_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="10dp" />

    <ImageView
        android:id="@+id/chartView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@mipmap/ic_launcher"
        android:layout_marginBottom="10dp" />

    <TextView
        android:id="@+id/tvIncomeStat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stat_income"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/tvExpenseStat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stat_expense"
        android:layout_marginTop="5dp" />

    <Button
        android:id="@+id/btnBackStats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_marginTop="20dp" />
</LinearLayout>
