<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    android:orientation="horizontal"
    android:padding="10dp"
    android:gravity="center_vertical">

    <!-- Image preview -->
    <ImageView
        android:id="@+id/itemImage"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="#DDDDDD"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_launcher"
        android:contentDescription="@string/transaction_image" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="15dp"
        android:layout_weight="1"
        android:gravity="center_vertical">

        <!-- Category -->
        <TextView
            android:id="@+id/itemCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_category_placeholder"
            android:textSize="18sp"
            android:textStyle="bold" />

        <!-- Amount -->
        <TextView
            android:id="@+id/itemAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_amount_placeholder"
            android:textSize="16sp"
            android:layout_marginTop="3dp" />

        <!-- Date -->
        <TextView
            android:id="@+id/itemDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_date_placeholder"
            android:textSize="14sp"
            android:layout_marginTop="3dp" />

    </LinearLayout>

</LinearLayout>
